<resources>
    <string name="app_name">Calculator-Ersig</string>
    <string name="resultString">0</string>
    <string name="_0Btn">0</string>
    <string name="decimalBtn">.</string>
    <string name="c">C</string>
    <string name="addBtn">+</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="subtractBtn">-</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="multiplyBtn">X</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="divideBtn">/</string>
    <string name="ce">CE</string>
    <string name="equalsBtn">=</string>
</resources>
