<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"


    >

    <android.support.v7.widget.GridLayout
        android:id="@+id/gridLayout2"
        android:layout_width="352dp"
        android:layout_height="441dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/equalsBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/equalsBtn"
            android:textSize="24sp"
            app:layout_column="2"
            app:layout_row="5" />

        <Button
            android:id="@+id/decimalBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/decimalBtn"
            android:textSize="24sp"
            app:layout_column="0"
            app:layout_row="5" />

        <Button
            android:id="@+id/clearBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c"
            android:textSize="24sp"
            app:layout_column="1"
            app:layout_row="1" />

        <Button
            android:id="@+id/addBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addBtn"
            android:textSize="24sp"
            app:layout_column="3"
            app:layout_row="5" />

        <Button
            android:id="@+id/oneBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1"
            android:textSize="24sp"
            app:layout_column="0"
            app:layout_row="4" />

        <Button
            android:id="@+id/twoBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2"
            android:textSize="24sp"
            app:layout_column="1"
            app:layout_row="4" />

        <Button
            android:id="@+id/threeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_3"
            android:textSize="24sp"
            app:layout_column="2"
            app:layout_row="4" />

        <Button
            android:id="@+id/subtractBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtractBtn"
            android:textSize="24sp"
            app:layout_column="3"
            app:layout_row="4" />

        <Button
            android:id="@+id/fourBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_4"
            android:textSize="24sp"
            app:layout_column="0"
            app:layout_row="3" />

        <Button
            android:id="@+id/fiveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_5"
            android:textSize="24sp"
            app:layout_column="1"
            app:layout_row="3" />

        <Button
            android:id="@+id/sixBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_6"
            android:textSize="24sp"
            app:layout_column="2"
            app:layout_row="3" />

        <Button
            android:id="@+id/multiplyBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multiplyBtn"
            android:textSize="24sp"
            app:layout_column="3"
            app:layout_row="3" />

        <Button
            android:id="@+id/sevenBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_7"
            android:textSize="24sp"
            app:layout_column="0"
            app:layout_row="2" />

        <Button
            android:id="@+id/eightBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_8"
            android:textSize="24sp"
            app:layout_column="1"
            app:layout_row="2" />

        <Button
            android:id="@+id/nineBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_9"
            android:textSize="24sp"
            app:layout_column="2"
            app:layout_row="2" />

        <Button
            android:id="@+id/divideBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/divideBtn"
            android:textSize="24sp"
            app:layout_column="3"
            app:layout_row="2" />

        <Button
            android:id="@+id/clearEntryBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ce"
            android:textSize="24sp"
            app:layout_column="0"
            app:layout_row="1" />

        <Button
            android:id="@+id/zeroBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0Btn"
            android:textSize="24sp"
            app:layout_column="1"
            app:layout_row="5" />

    </android.support.v7.widget.GridLayout>

    <TextView
        android:id="@+id/resultView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/resultString"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.467" />
</android.support.constraint.ConstraintLayout>
